Fixed few UI and alignment issues.

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -138,7 +138,7 @@
 
 .prel{position:relative}
 .mtop1 { margin-top: 1px; }
-
+.a-right{text-align:right}
 .mtop5  { margin-top: 5px;  }
 .mtop10 { margin-top: 10px; }
 .mtop15 { margin-top: 15px; }
@@ -149,6 +149,7 @@
 .mleft20 { margin-left: 20px; }
 .mleft30 { margin-left: 30px; }
 .mleft40 { margin-left: 40px; }
+.mleft60 { margin-left: 60px; }
 .mright40 { margin-right: 40px }
 .mbot10 { margin-bottom: 10px; }
 .mbot15 { margin-bottom: 15px; }
@@ -161,6 +162,7 @@
 .mtop50 { margin-top: 50px; }
 .ptop25 { padding-top: 25px; }
 .ptop30 { padding-top: 30px; }
+.ptop40 { padding-top: 40px; }
 .ptop60 { padding-top: 60px; }
 .pbot30 { padding-bottom: 30px; }
 .pleft20 { padding-left: 20px;}
