--- a/app/assets/stylesheets/topics.css.scss
+++ b/app/assets/stylesheets/topics.css.scss
@@ -37,7 +37,7 @@
 
     li {
       float: left;
-      margin: 0px 5px;
+      margin: 0 0 0 10px;
     }
 
     #home-link {
@@ -267,11 +267,10 @@
     height: 45px;
     width: 180px;
     text-align: center;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 6px;
     margin-left: 3px;
     border:1px solid #cd383f;
     @include gradient(#df646c, #aa383c);
+    @include border-radius-multi(6px,6px,0,0);
     @include box-shadow( inset 0 1px 0 rgba(255,255,255,0.25));
     
     &:hover {
@@ -813,10 +812,16 @@ span.no-votes {
 }
 
 .boughtit-button {
-  height: 24px;
+  height: 22px;
+  font-size:16px;
   display: table-cell;
   vertical-align: middle;
-  width: 90px;
+  @include border-radius(6px);
+  width: 115px;
+  
+  i{
+    margin:2px 5px 0 0;
+  }
 }
 
 .image-border{
